# budget-tracker

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/: CODEOWNERS  CONTRIBUTING.md
src/: main.c
src/core/console/: console.c  console.h  console_color.h
src/input/: input.c  input.h
src/input/validation/: date_validation.c  date_validation.h
src/menu/: menu.c  menu.h
src/transactions/: transaction.c  transaction.h  transaction_add.c  transaction_add.h  transaction_balance.c  transaction_balance.h  transaction_delete.c  transaction_delete.h  transaction_edit.c  transaction_edit.h  transaction_list.c  transaction_list.h
src/utils/: date_util.c  date_util.h  string_util.c  string_util.h  type_parser.c  type_parser.h
